[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.butterflycoder</groupId>
     <artifactId>butterfly-utils</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>butterfly-utils</name>
@@ -114,7 +114,7 @@
         <connection>git@github.com:ButterflyCoder/butterfly-utils.git</connection>
         <developerConnection>scm:git:git@github.com:ButterflyCoder/butterfly-utils.git</developerConnection>
         <url>https://github.com/ButterflyCoder/butterfly-utils</url>
-        <tag>butterfly-utils-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <profiles>
