--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.butterflycoder</groupId>
     <artifactId>butterfly-utils</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>butterfly-utils</name>
     <description>Java 8 Collection Utils</description>
@@ -140,7 +139,7 @@
         <connection>git@github.com:ButterflyCoder/butterfly-utils.git</connection>
         <developerConnection>scm:git:git@github.com:ButterflyCoder/butterfly-utils.git</developerConnection>
         <url>https://github.com/ButterflyCoder/butterfly-utils</url>
-        <tag>HEAD</tag>
+        <tag>butterfly-utils-1.0.0</tag>
     </scm>
 
     <profiles>
