--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.butterflycoder</groupId>
     <artifactId>butterfly-utils</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>butterfly-utils</name>
     <description>Java 8 Collection Utils</description>
